Lecture 1: similiarity in high dimensional spaces.

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -30,7 +30,7 @@
       "<tr><td>01</td><td>01/15</td><td>\n",
       "Introducci\u00f3n: Grafos y redes, tipos de redes, caracter\u00edsticas</td></tr> \n",
       "<tr><td>01</td><td>01/15</td><td>\n",
-      "Similitud entre elementos: Similitud de conjuntos, minhashing</td></tr>\n",
+      "[Similitud entre elementos: Similitud de conjuntos, minhashing](Lecture_1_Similarity.ipynb)</td></tr>\n",
       "<tr><td>02</td><td>01/22</td><td>\n",
       "Conceptos b\u00e1sicos 1: Grados, correlaciones, assortatividad</td></tr>\n",
       "<tr><td>02</td><td>01/22</td><td>\n",
@@ -107,12 +107,46 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Herramientas"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "En este curso uilizaremos las siguientes herramientas:\n",
+      "\n",
+      "* Python\n",
+      " * [iPython](http://ipython.org/): Plataforma para computo interactivo y visualizaci\u00f3n\n",
+      "* [Spark](http://spark.incubator.apache.org/): Plataforma para computo distribuido y de gran escala\n",
+      " * PySpark: Permite acceder el modelo de programaci\u00f3n de Spark desde Python\n",
+      " \n",
+      "### Instalar iPython\n",
+      "Instalar iPython:\n",
+      "\n",
+      "```\n",
+      "sudo easy_install ipython[all]\n",
+      "```\n",
+      "\n",
+      "http://ipython.org/ipython-doc/stable/install/install.html\n",
+      "\n",
+      "\n",
+      "### Instalar PySpark\n",
+      "Descargar Spark de la siguiente liga:\n",
+      "\n",
+      "http://spark.incubator.apache.org/downloads.html\n",
+      "\n",
+      "Descomprimir y ejecutar los siguientes comandos desde del directorio de spark:\n",
+      "\n",
+      "```\n",
+      "> sbt/sbt assembly\n",
+      "> ./pyspark\n",
+      "```"
+     ]
     },
     {
      "cell_type": "code",
