Added LSH section

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -13,16 +13,18 @@
      "source": [
       "# MAT-11020 M\u00e9todos Anal\u00edticos\n",
       "\n",
-      "La versi\u00f3n en l\u00ednea de este curso cubre los siguientes temas:\n",
+      "El curso de M\u00e9todos Anal\u00edticos est\u00e1 dividido en dos partes: \n",
       "\n",
-      "* Similitud entre elementos\n",
-      "* Sistemas de recomendaci\u00f3n\n",
-      "* Procesamiento de flujos\n",
-      "* Miner\u00eda de textos\n",
+      "* Teor\u00eda de redes\n",
+      "* Miner\u00eda de datos de gran escala\n",
+      "    * Similitud entre elementos\n",
+      "    * Sistemas de recomendaci\u00f3n\n",
+      "    * Procesamiento de flujos\n",
+      "    * Miner\u00eda de textos\n",
       "\n",
       "## Temario\n",
       "\n",
-      "Las clases se dividen en dos partes, en la primera parte se estudiar\u00e1n temas de an\u00e1lisis de redes\n",
+      "Cada sesi\u00f3n se divide en dos partes, en la primera se estudiar\u00e1n temas de teor\u00eda de redes\n",
       "y en la segunda diversas t\u00e9cnicas para el an\u00e1lisis de datos y textos.\n",
       "\n",
       "<table>\n",
@@ -30,11 +32,11 @@
       "<tr><td>01</td><td>01/15</td><td>\n",
       "Introducci\u00f3n: Grafos y redes, tipos de redes, caracter\u00edsticas</td></tr> \n",
       "<tr><td>01</td><td>01/15</td><td>\n",
-      "[Similitud entre elementos: Similitud de conjuntos, minhashing](Lecture_1_Similarity.ipynb)</td></tr>\n",
+      "[Similitud entre elementos: Similitud de conjuntos, minhashing, LSH](Lecture_1_Similarity.ipynb)</td></tr>\n",
       "<tr><td>02</td><td>01/22</td><td>\n",
       "Conceptos b\u00e1sicos 1: Grados, correlaciones, assortatividad</td></tr>\n",
       "<tr><td>02</td><td>01/22</td><td>\n",
-      "Similitud entre elementos: LSH</td></tr>\n",
+      "[Similitud entre elementos: escalando con PySpark](Lecture_1_Similarity_Spark.ipynb)</td></tr>\n",
       "<tr><td>03</td><td>01/29</td><td>\n",
       "Conceptos b\u00e1sicos 2: Centralidad, comunicabilidad</td></tr>\n",
       "<tr><td>03</td><td>01/29</td><td>\n",
@@ -126,14 +128,15 @@
       " * PySpark: Permite acceder el modelo de programaci\u00f3n de Spark desde Python\n",
       " \n",
       "### Instalar iPython\n",
-      "Instalar iPython:\n",
+      "La forma m\u00e1s sencilla de instalarlo junto con todas las dependencias es:\n",
+      "\n",
+      "http://ipython.org/install.html\n",
+      "\n",
+      "#### Instalar matplotlib\n",
       "\n",
       "```\n",
-      "sudo easy_install ipython[all]\n",
+      "conda install matplotlib\n",
       "```\n",
-      "\n",
-      "http://ipython.org/ipython-doc/stable/install/install.html\n",
-      "\n",
       "\n",
       "### Instalar PySpark\n",
       "Descargar Spark de la siguiente liga:\n",
