Added class description

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -13,14 +13,37 @@
      "source": [
       "# MAT-11020 M\u00e9todos Anal\u00edticos\n",
       "\n",
-      "El curso de M\u00e9todos Anal\u00edticos est\u00e1 dividido en dos partes: \n",
+      "## M\u00e9todos anal\u00edticos\n",
+      "El curso consiste de dos partes que exploran aspectos distintos de la teor\u00eda y pr\u00e1ctica del an\u00e1lisis de datos. Una parte del curso se ocupa de los conceptos centrales y aplicaciones de la teor\u00eda moderna de redes; la otra, en explorar t\u00e9cnicas para el an\u00e1lisis de conjuntos de datos num\u00e9ricos y textuales.\n",
+      "Objetivos\n",
       "\n",
-      "* Teor\u00eda de redes\n",
-      "* Miner\u00eda de datos de gran escala\n",
-      "    * Similitud entre elementos\n",
-      "    * Sistemas de recomendaci\u00f3n\n",
-      "    * Procesamiento de flujos\n",
-      "    * Miner\u00eda de textos\n",
+      "* Familiarizar al alumno con m\u00e9todos de an\u00e1lisis de informaci\u00f3n y redes.\n",
+      "* Que el alumno pueda implementar algoritmos de an\u00e1lisis.\n",
+      "* Presentar al alumno distintos aplicaciones pr\u00e1cticas en distintas disciplinas. \n",
+      "\n",
+      "## Prerrequisitos\n",
+      "\n",
+      "* \u00c1lgebra lineal.\n",
+      "* Conocimientos b\u00e1sicos de procesos estoc\u00e1sticos.\n",
+      "* Conocimientos b\u00e1sicos de sistemas din\u00e1micos.\n",
+      "* Habilidades de programaci\u00f3n en alguno de los siguientes lenguajes Python, Scala, R o Matlab (en ese orden).\n",
+      "\n",
+      "## Bibliograf\u00eda general\n",
+      "\n",
+      "* M. E. J. Newman. Networks: An Introduction. Oxford University Press, 2010.\n",
+      "* C. Manning, P. Raghavan and H. Sch\u00fctze: Introduction to Information Retrieval, Cambridge University Press. 2008.\n",
+      "* C. Manning and H. Sch\u00fctze: Foundations of Statistical Natural Language Processing, The MIT Press. 1999.\n",
+      "* A. Rajaraman and J. Ullman, Mining of Massive Datasets, Cambridge University Press, 2013.\n",
+      "\n",
+      "## Calificaci\u00f3n\n",
+      "La calificaci\u00f3n final ser\u00e1 compuesta de la siguiente manera:\n",
+      "\n",
+      "* 10% Participaci\u00f3n en clase\n",
+      "* 10% Presentaci\u00f3n del problema del proyecto final.\n",
+      "* 10% Presentaci\u00f3n de avances en el proyecto final.\n",
+      "* 10% Presentaci\u00f3n de resultados.\n",
+      "* 60% Reporte final. Se evaluar\u00e1n los resultados, la claridad de la exposici\u00f3n y la presentaci\u00f3n del documento.\n",
+      "\n",
       "\n",
       "## Temario\n",
       "\n",
