--- a/Lecture_1_Similarity.ipynb
+++ b/Lecture_1_Similarity.ipynb
@@ -12,7 +12,15 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "MAT-11020 M\u00e9todos Anal\u00edticos"
+      "MAT-11020 Similitud entre conjuntos"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Min-Hashing y Locality-Sensitive Hashing"
      ]
     },
     {
@@ -20,7 +28,7 @@
      "metadata": {},
      "source": [
       "### Objetivo\n",
-      "El objetivo de esta lecci\u00f3n es mostrar m\u00e9todos que permitan encontrar vecinos cercanos en un espacio de alta dimensionalidad de forma eficiente.\n",
+      "El objetivo de esta lecci\u00f3n es mostrar m\u00e9todos que permitan encontrar vecinos cercanos en espacios de alta dimensionalidad de forma eficiente.\n",
       "\n",
       "Nota: Esta lecci\u00f3n est\u00e1 basada en el Cap\u00edtulo 3 del libro Mining of Massive Datasets. Rajaraman, Leskovec and Ullman 2012 y en las notas del curso de M\u00e9todos Anal\u00edticos del 2013 por Felipe Gonzalez."
      ]
@@ -745,6 +753,13 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 18
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Para entender aprender m\u00e1s sobre LSH consulta el cap\u00edtulo 3.6 del libro Mining of Massive Datasets "
+     ]
     },
     {
      "cell_type": "markdown",
