Added class PDF

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -44,7 +44,7 @@
       "* 10% Presentaci\u00f3n de resultados.\n",
       "* 60% Reporte final. Se evaluar\u00e1n los resultados, la claridad de la exposici\u00f3n y la presentaci\u00f3n del documento.\n",
       "\n",
-      "(https://github.com/elmer-garduno/metodos-analiticos/blob/master/docs/Metodos_analiticos.pdf?raw=true)\n",
+      "[Descargar como PDF](https://github.com/elmer-garduno/metodos-analiticos/blob/master/docs/Metodos_analiticos.pdf?raw=true)\n",
       "\n",
       "## Temario\n",
       "\n",
