Added distributed LSH on PySpark

--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -39,10 +39,11 @@
       "La calificaci\u00f3n final ser\u00e1 compuesta de la siguiente manera:\n",
       "\n",
       "* 10% Participaci\u00f3n en clase\n",
+      "* 30% Tareas\n",
       "* 10% Presentaci\u00f3n del problema del proyecto final.\n",
       "* 10% Presentaci\u00f3n de avances en el proyecto final.\n",
       "* 10% Presentaci\u00f3n de resultados.\n",
-      "* 60% Reporte final. Se evaluar\u00e1n los resultados, la claridad de la exposici\u00f3n y la presentaci\u00f3n del documento.\n",
+      "* 30% Reporte final. Se evaluar\u00e1n los resultados, la claridad de la exposici\u00f3n y la presentaci\u00f3n del documento.\n",
       "\n",
       "[Descargar como PDF](https://github.com/elmer-garduno/metodos-analiticos/blob/master/docs/Metodos_analiticos.pdf?raw=true)\n",
       "\n",
@@ -54,13 +55,13 @@
       "<table>\n",
       "<tr><th>Sesi\u00f3n</th><th>Fecha</th><th>Tema</th></tr> \n",
       "<tr><td>01</td><td>01/15</td><td>\n",
-      "Introducci\u00f3n: Grafos y redes, tipos de redes, caracter\u00edsticas</td></tr> \n",
+      "[Introducci\u00f3n: Grafos y redes, tipos de redes, caracter\u00edsticas](http://www2.imperial.ac.uk/~mbegueri/Metodos/LectureNotes/Lecture1.pdf)</td></tr> \n",
       "<tr><td>01</td><td>01/15</td><td>\n",
-      "[Similitud entre elementos: Similitud de conjuntos, minhashing, LSH](Lecture_1_Similarity.ipynb)</td></tr>\n",
+      "[Similitud entre conjuntos: Similitud de conjuntos, minhashing, LSH](Lecture_1_Similarity.ipynb)</td></tr>\n",
       "<tr><td>02</td><td>01/22</td><td>\n",
       "Conceptos b\u00e1sicos 1: Grados, correlaciones, assortatividad</td></tr>\n",
       "<tr><td>02</td><td>01/22</td><td>\n",
-      "[Similitud entre elementos: escalando con PySpark](Lecture_1_Similarity_Spark.ipynb)</td></tr>\n",
+      "[Similitud entre conjuntos: escalando con PySpark](Lecture_2_Similarity_Spark.ipynb)</td></tr>\n",
       "<tr><td>03</td><td>01/29</td><td>\n",
       "Conceptos b\u00e1sicos 2: Centralidad, comunicabilidad</td></tr>\n",
       "<tr><td>03</td><td>01/29</td><td>\n",
