--- a/Lecture_1_Similarity.ipynb
+++ b/Lecture_1_Similarity.ipynb
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "MAT-11020 Similitud entre conjuntos"
+      "Lecci\u00f3n 1 - Similitud entre conjuntos"
      ]
     },
     {
@@ -557,7 +557,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Locality Sensitive Hashing"
+      "Locality-Sensitive Hashing"
      ]
     },
     {
