Added distributed LSH on PySpark

--- a/Lecture_1_Similarity.ipynb
+++ b/Lecture_1_Similarity.ipynb
@@ -566,11 +566,11 @@
      "source": [
       "En la secci\u00f3n anterior generamos res\u00famenes para cada conjunto de cardinalidad mucho menor que los conjuntos originales. Sin embrago para colecciones el orden de millones o miles de millones de documentos a\u00fan tenemos que comparar el resumen de cada nuevo documento con el resumen los documentos almacenados para determinar que tan similar es a cada uno de ellos. Esta tarea se vuelve casi imposible si queremos encontrar los elementos m\u00e1s similares entre todos los pares, ya que esto es un problema de orden $O(n^2)$.\n",
       "\n",
-      "En cambio, si solo calculamos la similitud entre los pares m\u00e1s similares arriba de cierto umbral $t$ podemos reducir sustancialmente el tiempo requerido para calcular los conjuntos de documentos que son similares entre si. El marco te\u00f3rico general para este enfoque es conocido como Locality Sensitive Hashing.  \n",
+      "Nuestro objetivo es solo calcular la similitud entre los pares m\u00e1s similares arriba de cierto umbral $t$ con el fin de reducir sustancialmente el tiempo requerido para calcular los conjuntos de documentos que son similares entre si. El marco te\u00f3rico general para este enfoque es conocido como Locality Sensitive Hashing.  \n",
       "\n",
-      "En el caso de Min-hashing la idea es aplicar una funci\u00f3n hash a las columnas de tal forma que los pares de documentos que tengan un hash com\u00fan se consideran _pares candidato_. \n",
+      "En el caso de Min-hashing la idea es aplicar una funci\u00f3n hash a las columnas de _minhash_, de tal forma que los pares de documentos que tengan un hash com\u00fan se consideren _pares candidato_. \n",
       "\n",
-      "Una forma eficiente de generar los _pares candidato_ es dividir la matriz de res\u00famenes en $b$ bandas de $r$ renglones y mapearlos cada banda a $k$ cubetas (en nuestro caso volver a aplicar una funci\u00f3n hash). Los _pares candidato_ ser\u00e1n aquellos que coincidan a la misma cubeta en al menos una banda. Los par\u00e1metros $b$ y $r$ permiten ajustar la precisi\u00f3n del m\u00e9todo.\n",
+      "Una forma eficiente de generar los _pares candidato_ es dividir la matriz de res\u00famenes en $b$ bandas de $r$ renglones y mapear cada banda a $k$ cubetas (en nuestro caso volver a aplicar una funci\u00f3n hash). Los _pares candidato_ ser\u00e1n aquellos que coincidan a la misma cubeta en al menos una banda. Los par\u00e1metros $b$ y $r$ permiten ajustar la precisi\u00f3n del m\u00e9todo.\n",
       "\n",
       "La intuici\u00f3n de este m\u00e9todo es que los hashes que coinciden en una cubeta fueron generados por columnas id\u00e9nticas en esa banda, y que mientras m\u00e1s similares sean dos columnas es m\u00e1s probable que coincidan en al menos una banda."
      ]
@@ -677,9 +677,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Es decir, qproximadamente 1 de cada 3000 pares de documentos que sean hasta 80% similares no ser\u00e1n _pares candidato_. \n",
+      "Es decir, aproximadamente 1 de cada 2500 pares de documentos que sean hasta 80% similares no ser\u00e1n _pares candidato_. \n",
       "\n",
-      "Finalmente, la probabilidad de que al menos una banda coincida  $1 - (1 - s^r)^b$ para un documento con probabilidad 80% es:"
+      "Finalmente, la probabilidad de que al menos una banda coincida  $1 - (1 - s^r)^b$ para un par de documentos con similitud del 80% es:"
      ]
     },
     {
@@ -706,7 +706,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Si graficamos la probabilidad de que las firmas de dos documentos sean _pares candidatos_ para distintos grados de similitud podemos ver que se forma una curva con forma de _S_, en esta curva la probabilidad de que un par de documentos sean _pares candidatos_ ser\u00e1 mayor a mayor similitud de Jaccard y menor a menor similitud de Jaccard."
+      "Si graficamos la probabilidad de que las firmas de dos documentos sean _pares candidatos_ para distintos grados de similitud podemos ver que se forma una curva con forma de _S_. En esta curva, la probabilidad de que un par de documentos sean _pares candidatos_ ser\u00e1 mayor a mayor similitud de Jaccard y menor a menor similitud de Jaccard."
      ]
     },
     {
@@ -1006,7 +1006,7 @@
       "\n",
       "La tarea consiste en implementar los m\u00e9todos de la clase LSH. Esta clase se construye con el umbral deseado y el tama\u00f1o de los shingles y tiene dos m\u00e9todos `create_db(self, docs)` para inicializar la base de datos y `similar(self, doc)` que regresa una lista con los ids de los documentos similares.\n",
       "\n",
-      "La clase debe implementar la versi\u00f3n eficiente de LSH, donde primero se obtienen solo aquellos documentos que son candidatos y sobre ellos se prueba si su similitud real es mayor al umbral.\n",
+      "La clase debe implementar la versi\u00f3n eficiente de LSH, donde primero se obtienen solo aquellos documentos que son candidatos y sobre ellos se prueba si su similitud real es mayor al umbral. Se sugiere utilizar los m\u00e9todos definidos en la lecci\u00f3n para llevar a cabo el ejercicio.\n",
       "\n",
       "Tip: Es posible implementar un `multimap` (donde cada llave mapea a una lista) utilizando:\n",
       "\n",
