--- a/Lecture_2_Similarity_Spark.ipynb
+++ b/Lecture_2_Similarity_Spark.ipynb
@@ -142,7 +142,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<pyspark.rdd.PipelinedRDD object at 0x10377da10>\n"
+        "<pyspark.rdd.PipelinedRDD object at 0x10357da10>\n"
        ]
       }
      ],
@@ -254,6 +254,13 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Aplicando el modelo LSH aprendido en la lecci\u00f3n anterior, aplicamos la funci\u00f3n lsh a cada uno de los conjuntos que definen los temas de cada art\u00edculo. "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -292,6 +299,15 @@
      "prompt_number": 6
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "La clase `LSH` y el m\u00e9todo `get_conf` est\u00e1n definidos en el archivo `lsh.py`. \n",
+      "\n",
+      "Para probar la aplicaci\u00f3n de este m\u00e9todo creamos un mapa con las firmas a las firmas asociadas a cada art\u00edculo. "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -323,6 +339,13 @@
      "prompt_number": 7
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "En este ejemplo es posible observar como art\u00edculos que contienen las mismas categor\u00edas se agrupan en una sola cubeta. A continuaci\u00f3n obtenemos el conjunto de art\u00edculos similares a un art\u00edculo dado a partir del valor de sus firmas."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -352,12 +375,7 @@
        ]
       }
      ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": []
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -398,7 +416,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -446,6 +464,13 @@
       }
      ],
      "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "A continuaci\u00f3n comparamos la precisi\u00f3n de el m\u00e9todo de LSH con el m\u00e9todo directo utilizando similitud de Jaccard."
+     ]
     },
     {
      "cell_type": "code",
@@ -549,13 +574,11 @@
      "prompt_number": 16
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "source": [
+      "Podemos observar en los resultados que el m\u00e9todo LSH efectivamente genero falsos positivos que estaban por arriba del umbral de similitud."
+     ]
     }
    ],
    "metadata": {}
