Added distributed LSH on PySpark

--- a/Lecture_2_Similarity_Spark.ipynb
+++ b/Lecture_2_Similarity_Spark.ipynb
@@ -142,7 +142,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<pyspark.rdd.PipelinedRDD object at 0x10357da10>\n"
+        "<pyspark.rdd.PipelinedRDD object at 0x10367da10>\n"
        ]
       }
      ],
@@ -280,19 +280,19 @@
        "prompt_number": 6,
        "text": [
         "[(u'Rage_Hard',\n",
-        "  [1698531787L,\n",
-        "   674338419L,\n",
-        "   294784065L,\n",
-        "   2132353950L,\n",
-        "   2922530270L,\n",
-        "   3092529889L]),\n",
+        "  ['0-1698531787',\n",
+        "   '16-674338419',\n",
+        "   '32-294784065',\n",
+        "   '48-2132353950',\n",
+        "   '64-2922530270',\n",
+        "   '80-3092529889']),\n",
         " (u'Diogo_C%C3%A3o',\n",
-        "  [3652685019L,\n",
-        "   1510720539L,\n",
-        "   973807287L,\n",
-        "   2397071194L,\n",
-        "   2239725734L,\n",
-        "   1219044189L])]"
+        "  ['0-3652685019',\n",
+        "   '16-1510720539',\n",
+        "   '32-973807287',\n",
+        "   '48-2397071194',\n",
+        "   '64-2239725734',\n",
+        "   '80-1219044189'])]"
        ]
       }
      ],
@@ -327,12 +327,19 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "[(2182873143L, [u'Intercalation', u'Calendar', u'Calendar_date']),\n",
-        " (3949461521L, [u'Allophone', u'Phone_(phonetics)']),\n",
-        " (1846891891L, [u\"Finagle's_law\", u'Laws_of_infernal_dynamics']),\n",
-        " (269222078L,\n",
-        "  [u'Autrefois_acquit', u'Autrefois_convict', u'Pardon_(plea)', u'Plea']),\n",
-        " (1919156655L, [u'Colour', u'Roman_Catholic', u'Weak_force', u'Beatles'])]"
+        "[('16-1782177572',\n",
+        "  [u'Book_of_Habakkuk',\n",
+        "   u'Book_of_Micah',\n",
+        "   u'Book_of_Malachi',\n",
+        "   u'Book_of_Zephaniah',\n",
+        "   u'Book_of_Haggai',\n",
+        "   u'Book_of_Nahum',\n",
+        "   u'Book_of_Zechariah']),\n",
+        " ('80-2966173331', [u'KAOS', u'KSL', u'Word_(disambiguation)']),\n",
+        " ('16-1719549260',\n",
+        "  [u'Biconditional_introduction', u'Biconditional_elimination']),\n",
+        " ('32-3331037536', [u'Intercalation', u'Calendar', u'Calendar_date']),\n",
+        " ('48-2472318991', [u'Uncountable_set', u'Countable_set'])]"
        ]
       }
      ],
@@ -375,7 +382,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -391,14 +398,24 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "doc = index['Third_Epistle_of_John']\n",
-      "conf_s70, db_s70 = create_lsh(0.7, articles)\n",
+      "conf_s70, db_s70 = create_lsh(0.7, articles)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "similar(doc, db_s70, conf_s70)"
      ],
      "language": "python",
@@ -416,14 +433,24 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "doc = index['Third_Epistle_of_John']\n",
-      "conf_s40, db_s40 = create_lsh(0.4, articles)\n",
+      "conf_s40, db_s40 = create_lsh(0.4, articles)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "similar(doc, db_s40, conf_s40)"
      ],
      "language": "python",
@@ -444,13 +471,13 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print sys.getsizeof(db_90), sys.getsizeof(db_s70), sys.getsizeof(db_s40)"
+      "print len(db_90), len(db_s70), len(db_s40)"
      ],
      "language": "python",
      "metadata": {},
@@ -459,11 +486,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "196888 196888 786712\n"
+        "1604 4197 16293\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -488,7 +515,7 @@
       "        if jaccard(set(doc), set(index[sim])) > threshold:\n",
       "            print '%s -> %s' % (sim, index[sim])\n",
       "\n",
-      "sys.getsizeof(alt)"
+      "len(alt)"
      ],
      "language": "python",
      "metadata": {},
@@ -496,13 +523,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 18,
        "text": [
-        "3146008"
+        "46759"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -523,7 +550,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
