Fixed Spark path

--- a/Lecture_2_Similarity_Spark.ipynb
+++ b/Lecture_2_Similarity_Spark.ipynb
@@ -44,7 +44,7 @@
       "```python\n",
       "# Configure the necessary Spark environment\n",
       "import os\n",
-      "os.environ['SPARK_HOME'] = '[path-to-spark-home]/spark/'\n",
+      "os.environ['SPARK_HOME'] = '[path-to-spark-home]/'\n",
       "\n",
       "# And Python path\n",
       "import sys\n",
