Fixed euclidean distance

--- a/Lecture_3_LSH_Theory.ipynb
+++ b/Lecture_3_LSH_Theory.ipynb
@@ -444,8 +444,31 @@
       "\n",
       "#### Distancia Euclidiana\n",
       "\n",
-      "que es la distancia entre dos puntos"
+      "La distancia Euclidiana es la distancia entre dos puntos en un espacio de dimensi\u00f3n $d$.\n",
+      "\n",
+      "Podemos construir una familia sensible a la localidad para distancia Euclideana usando la misma idea de proyecciones sobre vectores aleatorios. En lugar de ver si la proyecci\u00f3n es positiva o negativa, despu\u00e9s de\n",
+      "proyectar categorizamos formando cubetas de ancho $a$ sobre la proyecci\u00f3n.\n",
+      "\n",
+      "Si tomamos $a$ suficientemente grande, entonces la probabilidad de que dos puntos cercanos se mapeen a cubetas distintas es baja.\n",
+      "\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 102
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
