--- a/Lecture_3_LSH_Theory.ipynb
+++ b/Lecture_3_LSH_Theory.ipynb
@@ -446,11 +446,17 @@
       "\n",
       "La distancia Euclidiana es la distancia entre dos puntos en un espacio de dimensi\u00f3n $d$.\n",
       "\n",
-      "Podemos construir una familia sensible a la localidad para distancia Euclideana usando la misma idea de proyecciones sobre vectores aleatorios. En lugar de ver si la proyecci\u00f3n es positiva o negativa, despu\u00e9s de\n",
-      "proyectar categorizamos formando cubetas de ancho $a$ sobre la proyecci\u00f3n.\n",
+      "Podemos construir una familia sensible a la localidad para distancia Euclideana usando la misma idea de proyecciones sobre vectores aleatorios. \n",
       "\n",
-      "Si tomamos $a$ suficientemente grande, entonces la probabilidad de que dos puntos cercanos se mapeen a cubetas distintas es baja.\n",
-      "\n"
+      "Las funciones hash corresponden a una linea seleccionada al azar. Dividimos esta l\u00ednea en segmentos de longitud $a$. Mapeamos cada punto a la cubeta que contiene su proyecci\u00f3n en la l\u00ednea.\n",
+      "\n",
+      "Si la distancia entre dos puntos es peque\u00f1a comparada con $a$, la probabilidad de que mapeen a la misma cubeta es alta. \n",
+      "\n",
+      "Si el \u00e1ngulo entre la l\u00ednea seleccionada al azar y la l\u00ednea que conecta los puntos es alta, la probabilidad es incluso mayor. Si $d$ es m\u00e1s grande que $a$ entonces necesitamos $d \\text{ cos } \\theta \\le a$\n",
+      "\n",
+      "Si bien no podemos calcular de  forma sencilla, cual es la probabilidad $p_1$ de que dos puntos est\u00e9n a una distancai $d_1$, s\u00ed sabemos que es mayour que la probabilidad $p_2$ de que dos puntos a una distancia $d_2$ mapeen al mismo segmento de l\u00ednea.\n",
+      "\n",
+      "Por lo tanto podemos decir que existe una familia $(d_1, d_2, p_1, p_2)-sensible$ para cualquier n\u00famero de dimensiones.\n"
      ]
     },
     {
