Added references for LSH

--- a/Lecture_3_LSH_Theory.ipynb
+++ b/Lecture_3_LSH_Theory.ipynb
@@ -464,7 +464,10 @@
      "metadata": {},
      "source": [
       "### Referencias\n",
-      "\n"
+      "\n",
+      "* [Near-Optimal Hashing Algorithms for Approximate Nearest Neighbor in High Dimensions](http://people.csail.mit.edu/indyk/p117-andoni.pdf), Alexandr Andoni and Piotr Indyk\n",
+      "* [Near-Optimal Hashing Algorithms for Approximate Nearest Neighbor in High\n",
+      "Dimensions\u2217](http://www.mit.edu/~andoni/papers/cSquared.pdf)"
      ]
     },
     {
