--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -69,7 +69,7 @@
       "<tr><td>04</td><td>02/05</td><td>\n",
       "Small worlds, navegaci\u00f3n</td></tr>\n",
       "<tr><td>04</td><td>02/05</td><td>\n",
-      "Procesamiento de flujos: muestreo en flujos</td></tr>\n",
+      "[Sistemas de recomendaci\u00f3n](Lecture_4_Recommendation_Systems.ipynb)</td></tr>\n",
       "<tr><td>05</td><td>02/12</td><td>\n",
       "Presentaciones: Planteamiento del problema</td></tr>\n",
       "<tr><td>05</td><td>02/12</td><td>\n",
@@ -85,7 +85,7 @@
       "<tr><td>08</td><td>03/05</td><td>\n",
       "Din\u00e1mica de redes 1: Caminatas aleatorias, Laplaciano</td></tr>\n",
       "<tr><td>08</td><td>03/05</td><td>\n",
-      "Sistemas de recomendaci\u00f3n: basados en contenido</td></tr>\n",
+      "Procesamiento de flujos: muestreo en flujos</td></tr>\n",
       "<tr><td>09</td><td>03/12</td><td>\n",
       "Din\u00e1mica de redes 2: Contagio, percolaci\u00f3n</td></tr>\n",
       "<tr><td>09</td><td>03/12</td><td>\n",
