--- a/Lecture_3_LSH_Theory.ipynb
+++ b/Lecture_3_LSH_Theory.ipynb
@@ -16,14 +16,6 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Locality Sensitive Hashing"
-     ]
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -31,6 +23,14 @@
       "El objetivo de esta lecci\u00f3n es entender la teor\u00eda detr\u00e1s de los m\u00e9todos sensibles a la localidad.\n",
       "\n",
       "Nota: Esta lecci\u00f3n est\u00e1 basada en el Cap\u00edtulo 3 del libro Mining of Massive Datasets. Rajaraman, Leskovec and Ullman 2012 y en las notas del curso de M\u00e9todos Anal\u00edticos del 2013 por Felipe Gonzalez."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Locality Sensitive Hashing"
      ]
     },
     {
@@ -467,7 +467,7 @@
       "\n",
       "* [Near-Optimal Hashing Algorithms for Approximate Nearest Neighbor in High Dimensions](http://people.csail.mit.edu/indyk/p117-andoni.pdf), Alexandr Andoni and Piotr Indyk\n",
       "* [Near-Optimal Hashing Algorithms for Approximate Nearest Neighbor in High\n",
-      "Dimensions\u2217](http://www.mit.edu/~andoni/papers/cSquared.pdf)"
+      "Dimensions\u2217](http://www.mit.edu/~andoni/papers/cSquared.pdf), Alexandr Andoni and Piotr Indyk"
      ]
     },
     {
