--- a/Lecture_4_Recommendation_Systems.ipynb
+++ b/Lecture_4_Recommendation_Systems.ipynb
@@ -186,11 +186,12 @@
       "<tr><td>C</td><td></td><td></td><td>0</td></tr>\n",
       "</table>\n",
       "\n",
-      "Es importante considerar que en este caso,\n",
+      "Es importante considerar que en este caso:\n",
+      "\n",
       "* Las opciones en blanco est\u00e1n asignando una calificaci\u00f3n mas cercana a 1 que a 5\n",
       "* La existencia de de entradas comunes entre elementos genera valores para la distancia\n",
       "\n",
-      "Se puede compenzar este \u00faltimo efecto si consideramos un umbral $t$ y convertimos en _1_ los elementos mayor o igual de este umbral y en _blanco_ los que est\u00e9n debajo. Tomemos $t=3$\n",
+      "Se puede compensar este \u00faltimo efecto si consideramos un umbral $t$ y convertimos en _1_ los elementos mayor o igual de este umbral y en _blanco_ los que est\u00e9n debajo. Tomemos $t=3$\n",
       "\n",
       "<table>\n",
       "<tr><th></th><th>$P_1$</th><th>$P_2$</th><th>$P_3$</th><th>$P_4$</th><th>$P_5$</th><th>$P_6$</th><th>$P_7$</th></tr>\n",
@@ -213,7 +214,7 @@
       "\n",
       "#### Distancia Coseno normalizada\n",
       "\n",
-      "Podemos tambi\u00e9n normalizar las calificaciones de cada usaurio si a cada entrada le restamos la media de sus calificaciones. Esto nos permite _centrar_ las calificaciones y convertir las calificaciones altas vs bajas de cada usuario en opuestas.\n",
+      "Podemos tambi\u00e9n normalizar las calificaciones de cada usuario si a cada entrada le restamos la media de sus calificaciones. Esto nos permite _centrar_ las calificaciones y convertir las calificaciones altas vs bajas de cada usuario en opuestas.\n",
       "\n",
       "<table>\n",
       "<tr><th></th><th>$P_1$</th><th>$P_2$</th><th>$P_3$</th><th>$P_4$</th><th>$P_5$</th><th>$P_6$</th><th>$P_7$</th></tr>\n",
