--- a/Lecture_4_Recommendation_Systems.ipynb
+++ b/Lecture_4_Recommendation_Systems.ipynb
@@ -251,6 +251,58 @@
     {
      "cell_type": "markdown",
      "metadata": {},
+     "source": [
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "M\u00ednimos cuadrados alternados"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "M\u00e1s all\u00e1 de poder recomendar ciertos elementos dadas las preferencias de un usuario, nos gustar\u00eda poder recomendar a los usuarios a partir de los gustos / preferencias de otros usuarios.\n",
+      "\n",
+      "Si tomamos la matriz del ejemplo anterior tenemos:\n",
+      "\n",
+      "<table>\n",
+      "<tr><th></th><th>$P_1$</th><th>$P_2$</th><th>$P_3$</th><th>$P_4$</th><th>$P_5$</th><th>$P_6$</th><th>$P_7$</th></tr>\n",
+      "<tr><td>A</td><td>4</td><td></td><td></td><td>5</td><td>1</td><td></td><td></td></tr>\n",
+      "<tr><td>B</td><td>5</td><td>5</td><td>4</td><td></td><td></td><td></td><td></td></tr>\n",
+      "<tr><td>C</td><td></td><td></td><td></td><td>2</td><td>4</td><td>5</td><td></td></tr>\n",
+      "<tr><td>D</td><td></td><td>3</td><td></td><td></td><td></td><td></td><td>3</td></tr>\n",
+      "</table>\n",
+      "\n",
+      "Podemos observar que esta matriz es rala, nuestro objetivo es encontrar un modelo que pueda predecir los valores no observados en el modelo.\n",
+      "\n",
+      "Una de las formas m\u00e1s populares de filtrado colaborativo es la factorizaci\u00f3n de matrices. En este modelo construimos una aproximaci\u00f3n de la matriz de bajo rango."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "La matriz $M$ contienen las calificaciones para los usuarios (renglones) y elementos (columnas). $M$ se puede aproximar como el producto de un modelo de usuarios $W$ y un modelo para los elementos $V$.\n",
+      "\n",
+      "Cada rengl\u00f3n $W[i]$ es un vector que representa los factores latentes del usuario $i$ y cada rengl\u00f3n en $V[j]$ representa los factores latentes del elemento $j$.\n",
+      "\n",
+      "El producto de $W[i] \\cdot V[j]^T$ es un escalar que aproxima la calificaci\u00f3n $R_{i,j}$. En general podemos decir que $M \\approx W \\cdot V^T$.\n",
+      "\n",
+      "Las matrices $W$ y $V$ se pueden construir resolviendo el siguiente problema de optimizaci\u00f3n, donde el objetivo es minimizar el error cuadr\u00e1tico entre la matriz original y la aproximaci\u00f3n, para aquellos elementos que son observados.\n",
+      "\n",
+      "$$(W,V) = \\text{arg min}_{W,V} \\sum_{(ij)\\in E}{(M_{ij} - W_i \\cdot V_j^T)^2} + ||W||_2 + ||V||_2$$\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
      "source": []
     }
    ],
