--- a/Lecture_5_Stream_Algorithms.ipynb
+++ b/Lecture_5_Stream_Algorithms.ipynb
@@ -211,14 +211,14 @@
        "stream": "stdout",
        "text": [
         "Proporci\u00f3n de eventos > 200: 0.0000\n",
-        "Proporci\u00f3n de eventos > 200: 0.0000\n",
+        "Proporci\u00f3n de eventos > 200: 0.5000\n",
         "Proporci\u00f3n de eventos > 200: 0.0000\n",
         "Proporci\u00f3n de eventos > 200: 0.0000\n",
         "Proporci\u00f3n de eventos > 200: 0.0000\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -561,7 +561,7 @@
       "\n",
       "Cuando insertamos un nuevo elemento cada uno de los las $k$ posiciones tiene una probabilidad de ser uno igual a $1 - \\left(1 - \\frac{1}{n}\\right)^{km}$ por lo tanto la probabilidad de que las $k$ posiciones sean 1 es:\n",
       "\n",
-      "$$\\left[1 - \\left(1 - \\frac{1}{n}\\right)^{km}\\right]^k \\approx \\left(1 - e^{-kn/m}\\right)^k$$\n",
+      "$$\\left[1 - \\left(1 - \\frac{1}{n}\\right)^{km}\\right]^k \\approx \\left(1 - e^{-km/n}\\right)^k$$\n",
       "\n",
       "Esta aproximaci\u00f3n asume independencia entre cada una de las probabilidades, si bien esto no es estrictamente correcto para valores grandes de $n$ y valores chicos de $k$ la aproximaci\u00f3n es buena. Ver http://people.scs.carleton.ca/~kranakis/Papers/TR-07-07.pdf\n",
       "\n",
@@ -577,6 +577,14 @@
       "\n",
       "$$n = -\\frac{m\\text{ ln }p}{(\\text{ln }2)^2}$$\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
