--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -77,15 +77,14 @@
       "<tr><td>06</td><td>02/19</td><td>\n",
       "Redes aleatorias 1: Erd\u00f6s-Renyi</td></tr>\n",
       "<tr><td>06</td><td>02/19</td><td>\n",
-      "Procesamiento de flujos: filtrado</td></tr>\n",
+      "[Procesamiento de flujos: muestreo en flujos / filtrado](Lecture_5_Stream_Algorithms.ipynb)</td></tr>\n",
       "<tr><td>07</td><td>02/26</td><td>\n",
       "Redes aleatorias 2: Barab\u00e1si-Albert, configuraci\u00f3n</td></tr>\n",
       "<tr><td>07</td><td>02/26</td><td>\n",
       "Procesamiento de flujos: conteo</td></tr>\n",
       "<tr><td>08</td><td>03/05</td><td>\n",
       "Din\u00e1mica de redes 1: Caminatas aleatorias, Laplaciano</td></tr>\n",
-      "<tr><td>08</td><td>03/05</td><td>\n",
-      "Procesamiento de flujos: muestreo en flujos</td></tr>\n",
+      "<tr><td>08</td><td>03/05</td><td></td></tr>\n",
       "<tr><td>09</td><td>03/12</td><td>\n",
       "Din\u00e1mica de redes 2: Contagio, percolaci\u00f3n</td></tr>\n",
       "<tr><td>09</td><td>03/12</td><td>\n",
