--- a/Lecture_0_Introduction.ipynb
+++ b/Lecture_0_Introduction.ipynb
@@ -77,18 +77,18 @@
       "<tr><td>06</td><td>02/19</td><td>\n",
       "Redes aleatorias 1: Erd\u00f6s-Renyi</td></tr>\n",
       "<tr><td>06</td><td>02/19</td><td>\n",
-      "[Procesamiento de flujos: muestreo en flujos / filtrado](Lecture_5_Stream_Algorithms.ipynb)</td></tr>\n",
+      "Sistemas de recomendaci\u00f3n: filtrado colaborativo\n",
+      "</td></tr>\n",
       "<tr><td>07</td><td>02/26</td><td>\n",
       "Redes aleatorias 2: Barab\u00e1si-Albert, configuraci\u00f3n</td></tr>\n",
       "<tr><td>07</td><td>02/26</td><td>\n",
-      "Procesamiento de flujos: conteo</td></tr>\n",
+      "[Procesamiento de flujos: muestreo en flujos / filtrado](Lecture_5_Stream_Algorithms.ipynb)</td></tr>\n",
       "<tr><td>08</td><td>03/05</td><td>\n",
       "Din\u00e1mica de redes 1: Caminatas aleatorias, Laplaciano</td></tr>\n",
-      "<tr><td>08</td><td>03/05</td><td></td></tr>\n",
       "<tr><td>09</td><td>03/12</td><td>\n",
       "Din\u00e1mica de redes 2: Contagio, percolaci\u00f3n</td></tr>\n",
       "<tr><td>09</td><td>03/12</td><td>\n",
-      "Sistemas de recomendaci\u00f3n: filtrado colaborativo</td></tr>\n",
+      "[Procesamiento de flujos: conteo](Lecture_6_Stream_Algorithms_Counting.ipynb)</td></tr>\n",
       "<tr><td>10</td><td>03/19</td><td>\n",
       "Presentaciones: Avances</td></tr>\n",
       "<tr><td>10</td><td>03/19</td><td>\n",
